k8_version/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: replit-clone
  labels:
    name: replit-clone
