k8_version/k8s/04-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: replit-api-svc
  namespace: replit-clone
spec:
  type: ClusterIP
  selector:
    app: replit-api
  ports:
    - port: 4000
      targetPort: 4000
      protocol: TCP
